<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_exit">Exit</string>
    <string name="ancient_coordinates_database">Ancient Coordinates Database</string>
    <string name="quantity">Quantity</string>
    <string name="neural_network_analyzer">Neural Network Analyzer</string>

</resources>