<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText android:id="@+id/edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    
    <Button android:id="@+id/button_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_ancient_coordinates_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:hint="@string/quantity"
            android:inputType="number" >

        </EditText>

        <TextView
            android:id="@+id/text_ancient_coordinates_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ancient_coordinates_database" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:hint="@string/quantity"
            android:inputType="number" />

        <TextView
            android:id="@+id/text_neural_network_analyzer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neural_network_analyzer" />

    </LinearLayout>

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="exit"
        android:text="@string/button_exit" />

</LinearLayout>